--- a/src/index.html
+++ b/src/index.html
@@ -272,7 +272,21 @@
           </h5>
         </div>
       </div>
+    </section>
 
+    <section class="slider-blog">
+      <div class="container">
+        <div class="slider-blog__inner">
+          <div class="slider-blog__item">
+            <a class="slider-blog__link" href="#">
+              <h3 class="slider-blog__title"></h3>
+            </a>
+            <p class="slider-blog__description">
+
+            </p>
+          </div>
+        </div>
+      </div>
     </section>
 
 
