--- a/src/index.html
+++ b/src/index.html
@@ -195,49 +195,49 @@
         </div>
         <div class="portfolio__item mix category-a">
           <img src="assets/images/portfolio-img-2.jpg" alt="portfolio images">
-        <a class="portfolio__item-link" href="#">
+          <a class="portfolio__item-link" href="#">
             SHOW PROJECT
           </a>
         </div>
         <div class="portfolio__item mix category-b">
           <img src="assets/images/portfolio-img-4.jpg" alt="portfolio images">
-        <a class="portfolio__item-link" href="#">
+          <a class="portfolio__item-link" href="#">
             SHOW PROJECT
           </a>
         </div>
         <div class="portfolio__item mix category-b">
           <img src="assets/images/portfolio-img-4.jpg" alt="portfolio images">
-        <a class="portfolio__item-link" href="#">
+          <a class="portfolio__item-link" href="#">
             SHOW PROJECT
           </a>
         </div>
         <div class="portfolio__item mix category-b">
           <img src="assets/images/portfolio-img-5.jpg" alt="portfolio images">
-        <a class="portfolio__item-link" href="#">
+          <a class="portfolio__item-link" href="#">
             SHOW PROJECT
           </a>
         </div>
         <div class="portfolio__item mix category-c">
           <img src="assets/images/portfolio-img-6.jpg" alt="portfolio images">
-        <a class="portfolio__item-link" href="#">
+          <a class="portfolio__item-link" href="#">
             SHOW PROJECT
           </a>
         </div>
         <div class="portfolio__item mix category-c">
           <img src="assets/images/portfolio-img-7.jpg" alt="portfolio images">
-        <a class="portfolio__item-link" href="#">
+          <a class="portfolio__item-link" href="#">
             SHOW PROJECT
           </a>
         </div>
         <div class="portfolio__item mix category-c">
           <img src="assets/images/portfolio-img-8.jpg" alt="portfolio images">
-        <a class="portfolio__item-link" href="#">
+          <a class="portfolio__item-link" href="#">
             SHOW PROJECT
           </a>
         </div>
         <div class="portfolio__item mix category-d">
           <img src="assets/images/portfolio-img-9.jpg" alt="portfolio images">
-        <a class="portfolio__item-link" href="#">
+          <a class="portfolio__item-link" href="#">
             SHOW PROJECT
           </a>
         </div>
@@ -279,10 +279,74 @@
         <div class="slider-blog__inner">
           <div class="slider-blog__item">
             <a class="slider-blog__link" href="#">
-              <h3 class="slider-blog__title"></h3>
+              <h3 class="slider-blog__title">
+                АНИМИРОВАННЫЙ ЛОГОТИП –
+                ТРЕНД ИЛИ НЕОБХОДИМОСТЬ?
+              </h3>
             </a>
             <p class="slider-blog__description">
-
+              Что представляет собой анимированный логотип, и в чем его преимущества? И почему сейчас это модно? Давайте
+              обсудим.
+            </p>
+          </div>
+          <div class="slider-blog__item">
+            <a class="slider-blog__link" href="#">
+              <h3 class="slider-blog__title">
+                АНИМИРОВАННЫЙ ЛОГОТИП –
+                ТРЕНД ИЛИ НЕОБХОДИМОСТЬ?
+              </h3>
+            </a>
+            <p class="slider-blog__description">
+              Что представляет собой анимированный логотип, и в чем его преимущества? И почему сейчас это модно? Давайте
+              обсудим.
+            </p>
+          </div>
+          <div class="slider-blog__item">
+            <a class="slider-blog__link" href="#">
+              <h3 class="slider-blog__title">
+                АНИМИРОВАННЫЙ ЛОГОТИП –
+                ТРЕНД ИЛИ НЕОБХОДИМОСТЬ?
+              </h3>
+            </a>
+            <p class="slider-blog__description">
+              Что представляет собой анимированный логотип, и в чем его преимущества? И почему сейчас это модно? Давайте
+              обсудим.
+            </p>
+          </div>
+          <div class="slider-blog__item">
+            <a class="slider-blog__link" href="#">
+              <h3 class="slider-blog__title">
+                АНИМИРОВАННЫЙ ЛОГОТИП –
+                ТРЕНД ИЛИ НЕОБХОДИМОСТЬ?
+              </h3>
+            </a>
+            <p class="slider-blog__description">
+              Что представляет собой анимированный логотип, и в чем его преимущества? И почему сейчас это модно? Давайте
+              обсудим.
+            </p>
+          </div>
+          <div class="slider-blog__item">
+            <a class="slider-blog__link" href="#">
+              <h3 class="slider-blog__title">
+                АНИМИРОВАННЫЙ ЛОГОТИП –
+                ТРЕНД ИЛИ НЕОБХОДИМОСТЬ?
+              </h3>
+            </a>
+            <p class="slider-blog__description">
+              Что представляет собой анимированный логотип, и в чем его преимущества? И почему сейчас это модно? Давайте
+              обсудим.
+            </p>
+          </div>
+          <div class="slider-blog__item">
+            <a class="slider-blog__link" href="#">
+              <h3 class="slider-blog__title">
+                АНИМИРОВАННЫЙ ЛОГОТИП –
+                ТРЕНД ИЛИ НЕОБХОДИМОСТЬ?
+              </h3>
+            </a>
+            <p class="slider-blog__description">
+              Что представляет собой анимированный логотип, и в чем его преимущества? И почему сейчас это модно? Давайте
+              обсудим.
             </p>
           </div>
         </div>
